Wed Aug 11 17:17:50 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (RPATHFLAG): stop setting RPATHFLAG on Interix.

Mon Aug  9 15:03:20 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httpservlet/erbhandler.rb
	  (WEBrick::HTTPServlet::ERBHandler#do_GET): should select media type
	  by suffix of script filename.

Mon Aug  9 12:51:43 2004  Dave Thomas  <dave@pragprog.com>

	* dir.c (dir_s_glob): Roll in Austin Ziegler's Dir.glob and
	  fnmatch updates.

Mon Aug  9 06:33:06 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (cp_r): copies symlink to symlink, except
	  root entries of cp_r.

	* lib/fileutils.rb: new method FileUtils.copy_entry.

	* test/fileutils/test_fileutils.rb: more cp_r tests.

Sun Aug  8 00:43:31 2004  why the lucky stiff  <why@ruby-lang.org>

	* lib/implicit.c: added sexagecimal float#base60.

	* ext/syck/rubyext.c (yaml_org_handler): ditto.

	* lib/token.c: indentation absolutely ignored when processing flow
	  collections.  plain scalars are trimmed if indentation follows in
	  an ambiguous flow collection.

Sat Aug  7 00:50:01 2004  Tanaka Akira  <akr@m17n.org>

	* ext/zlib/zlib.c: Zlib::GzipReader#read(0) returns "" instead of nil.

Tue Aug  3 13:49:12 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/namespace.rb: bug fix

	* ext/tk/lib/tkextlib/treectrl/tktreectrl.rb: add Tk::TreeCtrl.loupe

Mon Aug  2 23:33:48 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* test/ruby/test_file.rb (test_fnmatch): added more tests.

Mon Aug  2 18:04:21 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/msgcat.rb (set_translation): bug fix (fail to set
	  trans_str to the same as src_str when trans_str is not given.)

Mon Aug  2 17:40:44 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (blk_free): fixed serious memory leak. [ruby-dev:24013]

Mon Aug  2 11:53:06 2004  Dave Thomas  <dave@pragprog.com>
